# fpipe

./: CHANGELOG.md  Cargo.toml  README.md
src/: main.rs
tests/: tests.rs
