[package]
name = "fpipe"
version = "0.1.3"
authors = ["Alexandru Macovei <alexnmaco@gmail.com>"]
edition = "2018"
license = "MIT"
description = "fpipe is a tool that lets you filter and map in a shall pipe"
keywords = ["cli", "filter", "pipe", "shell"]
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/alexmaco/fpipe"
repository = "https://github.com/alexmaco/fpipe"
resolver = "2"

[dev-dependencies]
test_dir = "0.2.0"
assert_cmd = "2.0.10"
predicates = "3.0.1"

[dependencies]
concolor-clap = "0.1.0"

[dependencies.clap]
version = "4.1.13"
features = ["derive"]

[dependencies.tokio]
version = "1.26.0"
default-features = false
features = ["io-std", "io-util", "process", "rt"]

[profile.release]
lto = "fat"
